Thu Dec 10 14:41:13 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
          Wait a few seconds before the actual writing starts.

        * connectors/dds4ccm/tests/ListenOneByOne/*:
          Added one_by_one listener test.

        * bin/ciao_tests.lst:
          Added one_by_one test to the test framework.

Thu Dec 109 14:31:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst
        * connectors/dds4ccm/tests/Updater/Base/Updater_Base.idl:
        * connectors/dds4ccm/tests/Updater/Base/Updater_Base.mpc:
        * connectors/dds4ccm/tests/Updater/Connector/Updater_Connector.idl:
        * connectors/dds4ccm/tests/Updater/Connector/Updater_Connector.mpc:
        * connectors/dds4ccm/tests/Updater/Connector/Updater_Connector_exec.cpp:
        * connectors/dds4ccm/tests/Updater/Connector/Updater_Connector_exec.h:
        * connectors/dds4ccm/tests/Updater/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/Updater/Receiver:
        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver.idl:
        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver.mpc:
        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver_exec.h:
        * connectors/dds4ccm/tests/Updater/Sender:
        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender.idl:
        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender.mpc:
        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender_exec.cpp:
        * connectors/dds4ccm/tests/Updater/Sender/Updater_Sender_exec.h:
          Implement test for Updater functions

Thu Dec 10 13:30:01 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Added !FIXED_BUGS_ONLY for the connection tests since
          there's a known issue in the connector.
